# jimmy

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
automated/: check.sh  check_fix.sh
src/: colors.h  command.c  command.h  database.c  database.h  images.h  main.c  main.h  read_token.c  read_token.h  token.c
src/commands/: about.c  about.h  index.c  index.h  ping.c  ping.h
src/statements/: database_init.h  helper.h
